# hipp

./: .gitignore  CITATION.cff  Dockerfile  README.md  docker-build.sh  docker-run.sh  example.py  main.py  pyproject.toml  requirements.txt  setup.py
data/example/: hypercube.hdr
examples/: example.py
hipp/: segmentation.py
hipp/background_removal/: common.py  otsu_thresholding.py
hipp/core/: module.py  pipeline.py
hipp/dead_pixel_detection/: standard_deviation_threshold.py
hipp/denoising/: minimum_noise_fraction_transform.py  savitzky_golay_filter.py  wavelet_filter.py
hipp/dimensionality_reduction/: principal_components.py  spatial_binning.py  spectral_binning.py
hipp/io/: dataloader.py
hipp/outlier_detection/: copula_based_outlier_detection.py  reed_xiaoli_detector.py  stochastic_outlier_selection.py
hipp/scatter_correction/: multiplicative_scatter_correction.py  standard_normal_variate.py
hipp/spike_detection/: standard_deviation_factor.py
hipp/utils/: logger.py  utility.py
src/: requirements.txt  setup.py
src/hipp/: segmentation.py
src/hipp/background_removal/: common.py  otsu_thresholding.py
src/hipp/core/: module.py  pipeline.py
src/hipp/denoising/: savitzky_golay_filter.py  wavelet_filter.py
src/hipp/dimensionality_reduction/: principal_components.py  spatial_binning.py  spectral_binning.py
src/hipp/io/: dataloader.py
src/hipp/utils/: utility.py
