[tool.poetry]
name = "hipp"
version = "0.1.0"
description = "Collection of algorithms for creating Hyperspectral Image Preprocessing Pipelines (HIPP)."
authors = ["Andreas Schliebitz <a.schliebitz@hs-osnabrueck.de>"]
license = "Creative Commons CC BY 4.0"
readme = "README.md"
packages = [{ include = "hipp" }]

[tool.poetry.dependencies]
python = ">=3.8.0, <3.9.0"
numpy = "1.21.1"
opencv-contrib-python = "4.5.3.56"
requests = "2.26.0"
spectral = "0.22.2"
numba = "0.53.1"
joblib = "1.0.1"
scipy = "1.6.3"
tifffile = "2021.7.30"
scikit-learn = "0.24.2"
scikit-image = "0.18.2"
statsmodels = "0.12.2"
zstandard = "0.15.2"
lz4 = "3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
